...
    <string name="unlock_collection">Edit</string>
    <string name="coin_slot_description">Coin Image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_coin_type">Select Coin Type</string>
    <string name="select_grade">Grade</string>
...
    <string name="advanced_view_string">Advanced View</string>
    <string name="okay_exp">Okay!</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="img_default">Default</string>
...
    <string name="collection_complete">Collection Complete!</string>
    <string name="select_collection_name">Select a new collection name</string>
    <string name="view">View</string>
    <string name="toggle_collected">Toggle Collected</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="warning">Warning!</string>
    <string name="toggle_search">Toggle Search</string>
    <string name="search_hint">Search coins&#8230;</string>
...
    <string name="export_collection">Export Collection</string>
    <string name="reorder_collection">Reorder Collections</string>
    <string name="rename_collection">Rename Collections</string>
    <string name="app_info">App Info</string>
    <string name="select_collection_delete">Select a collection to delete</string>
    <string name="collection_actions">Collection Actions</string>
    <string name="coin_actions">Coin Actions</string>
    <string name="copy_name_suffix">\ Copy</string>
...

    <!-- Mint Marks (and related) -->
    <string name="include_p">Include coins from the Philadelphia mint</string>
    <string name="include_d">Include coins from the Denver mint</string>
    <string name="include_s">Include coins from the San Francisco mint</string>
...
    <string name="include_semiq_coins">Include SemiQ Coins</string>

    <string name="create_page">Create New Collection!</string>
    <string name="update_page">Update Collection!</string>
    <string name="collection_type">Collection Type: </string>
    <string name="enter_start_year">Starting Year: </string>
...
    <string name="error_starting_year_too_high">Starting year can\'t be greater than the collection ending year (%1$d)</string>
    <string name="error_start_gt_end_year">Starting year can\'t be greater than the ending year</string>
    <string name="warning_collection_type_change">Changing the collection type for an existing collection will delete all progress! Do you want to continue?</string>
    <string name="warning_collection_dates_change">Changing the collection dates for an existing collection will delete some coin progress! Do you want to continue?</string>
    <string name="warning_collection_options_changed">Changing the collection options for an existing collection will delete some coin progress! Do you want to continue?</string>
...
    <string name="quantities_text_view_template">Quantity: %1$s</string>
    <string name="notes_text_view_template">Notes:\n%1$s</string>
    <string name="collected">collected</string>
    <string name="missing">missing</string>

    <!-- Collection Filter -->
    <string name="filter_coins">Filter Coins</string>
    <string name="show_all_coins">Show All</string>
    <string name="show_collected_coins">Show Collected</string>
    <string name="show_missing_coins">Show Missing</string>
    <string name="filter_dialog_title">Coin Display Filter</string>
    
    <!-- Filter Status Indicator -->
...
    <string name="tutorial_add_to_and_lock_collection">Add a coin to your collection by clicking the space above its year or name.  Also, you can prevent accidental changes using the \'LOCK\' action</string>
    <string name="dialog_unsaved_changes_change_views">This collection has unsaved changes. Please save before changing views.</string>
    <string name="dialog_unsaved_changes_exit">Leaving this page will erase your unsaved changes, are you sure you want to exit?</string>
    <string name="collection_locked">Collection is currently locked, hit the \'Edit\' action to unlock</string>
    <string name="edit_coin_info">Edit coin details</string>
...
