<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/advanced_collection_page_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/filter_status_indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/filter_status_indicator_background"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/filter_status_indicator_text_color"
        android:textSize="15sp"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:text="" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:layout_marginBottom="8dp"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_hint"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/advanced_collection_page"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:descendantFocusability="beforeDescendants"/>

        <TextView
            android:id="@+id/unsaved_message_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/unsaved_message_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/unsaved_message"
            android:textColor="@color/unsaved_message_text_color"
            android:textSize="18sp"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>