...
    <RelativeLayout
        android:id="@+id/section1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/coinImage"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/coin_slot_description" />
        <!-- android:layout_alignParentTop="true" />-->
        <TextView
            android:id="@+id/coinText"
...
        android:layout_alignTop="@id/section1"
        android:layout_alignBottom="@id/section1"
        android:layout_toEndOf="@id/section1"
        android:gravity="center">

        <Spinner
            android:id="@+id/grade_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:prompt="@string/select_grade" />

        <Spinner
...
