...
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_enter_collection_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_collection_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="50dp"
...
            android:orientation="horizontal">

            <TextView
                android:id="@+id/collection_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/coin_selector"
                android:layout_alignBottom="@id/coin_selector"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/collection_type" />

            <Spinner
...
                android:layout_toEndOf="@id/collection_type_text"
                android:minHeight="50dp"
                android:prompt="@string/select_coin_type" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/check_show_mint_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/show_mint_mark" />

        <CheckBox
...
